# uptimekuma-tui

./: .env.example  .gitignore  Cargo.toml  README.md  bundle_macos.sh  package.json
docs/: websocket-doc.md
src/: main.rs
