[package]
name = "uptimekuma-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio", "advanced", "svg", "canvas"] }
rust_socketio = { version = "0.6", features = ["async"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
anyhow = "1.0"
base64 = "0.22"
regex = "1.10"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
url = "2"
